aggiornato diario AdR

--- a/doc/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/diario.tex
@@ -2,8 +2,9 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	1.0.1 & {\GG} (Verificatore) & 01/02/2017 & Incrementi e correzioni a seguito della revisione (creato UC3.1; corretti UC4.1.6.3.2, UC4.2.1, diagramma UC5 e alcune postcondizioni) \\ \hline
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
-	0.4.0 & {\LS} (Verificatore) & 06/01/2017 & Verifica introduzione, descrizione generale e requisiti\\ \hline
+	0.4.0 & {\LS} (Verificatore) & 06/01/2017 & Verifica introduzione, descrizione generale e requisiti \\ \hline
 	0.3.0 & {\MM} (Verificatore) & 06/01/2017 & Verifica UC5.3-UC7 \\ \hline
 	0.2.0 & {\LB} (Verificatore) & 06/01/2017 & Verifica UC4.2-UC5.2 \\ \hline
 	0.1.0 & {\AZ} (Verificatore) & 06/01/2017 & Verifica UC1-4.1.8 \\ \hline
