incremento PdP, non finito

--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -2,10 +2,10 @@
 % da usare tramite il comando \input{../../util/hx-vers}
 % da aggiornare con il comando ./versioni.sh (dalla cartella doc)
 
-\newcommand{\NdP}{\emph{Norme\_di\_progetto\_1\_0\_0.pdf}}
-\newcommand{\Verbali}{\emph{Verbali.pdf}}
-\newcommand{\AdR}{\emph{Analisi\_dei\_requisiti\_1\_0\_0.pdf}}
-\newcommand{\SdF}{\emph{Studio\_di\_fattibilita\_1\_0\_0.pdf}}
-\newcommand{\PdP}{\emph{Piano\_di\_progetto\_1\_0\_0.pdf}}
-\newcommand{\PdQ}{\emph{Piano\_di\_qualifica\_1\_0\_0.pdf}}
-\newcommand{\Glossario}{\emph{Glossario\_1\_0\_0.pdf}}
+\newcommand{\NdP}{\emph{\mbox{Norme\_di\_progetto\_1\_0\_0.pdf}}}
+\newcommand{\Verbali}{\emph{\mbox{Verbali.pdf}}}
+\newcommand{\AdR}{\emph{\mbox{Analisi\_dei\_requisiti\_1\_0\_0.pdf}}}
+\newcommand{\SdF}{\emph{\mbox{Studio\_di\_fattibilita\_1\_0\_0.pdf}}}
+\newcommand{\PdP}{\emph{\mbox{Piano\_di\_progetto\_1\_0\_0.pdf}}}
+\newcommand{\PdQ}{\emph{\mbox{Piano\_di\_qualifica\_1\_0\_0.pdf}}}
+\newcommand{\Glossario}{\emph{\mbox{Glossario\_1\_0\_0.pdf}}}
