--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -18,225 +18,156 @@
 \listoffigures
 \newpage
 
-\section{Introduzione}
-	\subsection{Scopo del documento}
 
-	Il presente documento illustra la pianificazione adottata dal gruppo \hx{} finalizzata alla produzione del progetto \proj{}.
-	In particolare, questo documento si appresta a:
-	\begin{itemize}
-		\item analizzare e trattare i rischi;
-		\item preventivare le risorse necessarie;
-		\item pianificare le attività da svolgere;
-		\item fornire un consuntivo del lavoro svolto.
-	\end{itemize}
-	\subsection{Struttura del documento}
-	Esso è suddiviso nelle seguenti sezioni:
+
+
+
+%%%%%%%%%%%%%%%%
+%%  Introduzione
+%%%%%%%%%%%%%%%%
+
+\section{Introduzione}
+
+\subsection{Scopo del documento}
+Il presente documento illustra la pianificazione adottata dal gruppo \hx{} finalizzata alla produzione del progetto \proj.
+In particolare, questo documento si appresta a:
+\begin{itemize}
+	\item analizzare e trattare i rischi;
+	\item preventivare le risorse necessarie;
+	\item pianificare le attività da svolgere;
+	\item fornire un consuntivo del lavoro svolto.
+\end{itemize}
+
+\subsection{Struttura del documento}
+Esso è suddiviso nelle seguenti sezioni:
 \begin{description}
-	\item[sezione \ref{sec:modello}] Scelta del modello di sviluppo adottato;
-	\item[sezione \ref{sec:analisi}] Analisi e trattamento dei rischi;
+	\item[sezione \ref{sec:modscelto}] Scelta del modello di sviluppo;
+	\item[sezione \ref{sec:rischi}] Analisi e trattamento dei rischi;
 	\item[sezione \ref{sec:pianificazione}] Pianificazione delle attività;
 	\item[sezione \ref{sec:preventivo}] Suddivisione delle ore lavorative e preventivo;
            \item[sezione \ref{sec:consuntivo}] Consuntivo di periodo;
 	\item[sezione \ref{sec:organigramma}] Organigramma.
 \end{description}
 
-	\subsection{Scopo del prodotto}
-	\scopo{}
-	
-	\subsection{Glossario}
-	\presgloss{}
-	\subsection{Riferimenti}
-		\subsubsection{Normativi}
-		\begin{description}
-			\item \NdP;
-			\item[Capitolato d'appalto C6: \proj]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
-			\item[Regolamento del progetto didattico]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
-			\item[Vincoli di organigramma e dettagli tecnico-economici]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}.
-		\end{description}
-		\subsubsection{Informativi} \label{sec:ref}
-		\begin{description}
-			\item[Slides del corso di Ingegneria del Software]\url{http://www.math.unipd.it/~tullio/IS-1/2016/};
-			\item[Ingegneria del Software - Ian Sommerville - Ottava Edizione]
-			\begin{description}
-				\item Capitolo 4: Software Processes;
-			\end{description}
-		\end{description}
+\subsection{Scopo del prodotto}
+\scopo
 
-	\subsection{Scadenze}
-	Il gruppo \hx{} ha deciso di rispettare le seguenti scadenze:
-		\begin{description}
-			\item[Revisione dei Requisiti] 24-01-2017;
-			\item[Revisione di Progettazione] 13-03-2017 presentandosi con Revisione di Progettazione minima;
-			\item[Revisione di Qualifica] 18-04-2017;
-			\item[Revisione di Accettazione] 15-05-2017.
-		\end{description}
+\subsection{Glossario}
+\presgloss
 
+\subsection{Riferimenti}
+\subsubsection{Riferimenti normativi}
+\begin{itemize}
+	\item \NdP;
+	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 07/02/2017;
+	\item Regolamento del progetto didattico] \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 07/02/2017;
+	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 07/02/2017.
+\end{itemize}
+\subsubsection{Riferimenti informativi} \label{sec:ref}
+\begin{itemize}
+	\item Slides del corso di Ingegneria del Software: \url{http://www.math.unipd.it/~tullio/IS-1/2016/};
+	\item I. Sommerville, \emph{Software Engineering} (8a ed.) --- capitolo 4, \emph{Software Processes}.
+\end{itemize}
 
-\section{Modello di sviluppo} \label{sec:modello}
-
-	La scelta di un modello di sviluppo è cruciale per la corretta pianificazione delle attività. Da essa infatti si deriva tutta la struttura principale con cui saranno pianificati \gloss{milestone} e task.
-
-	Il progetto {\proj}, come affrontato nei documenti \emph{Studio di fattibilità} e \emph{Piano di Qualifica}, presenta numerosi punti critici, analizzati nella sezione {\ref{sec:analisi}}, in particolare nella sezione {\ref{sec:tec}}, in cui sono analizzati i rischi tecnologici. Generalmente {\proj} richiede una intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software CASE e alla loro risoluzione, tenendo conto del quantitativo di risorse assegnate al progetto. %[riferimento a verbale di riunione con zucchetti?]
-
-	Un progetto dedito all'esplorazione va supportato con un adeguato modello di sviluppo; esso deve avere i seguenti requisiti:
-
-	\begin{itemize}
-		\item \textbf{Tracciabilità delle funzionalità di massima del software}, per definire gli obiettivi cardine del progetto;
-		\item Sufficiente \textbf{elasticità in fase di progettazione}, al fine di poter esplorare in modo profondo le possibili implementazioni;
-		\item Possibilità di \textbf{raffinamento dei requisiti}, in caso si volesse indirizzare la ricerca in una direzione piuttosto che un'altra, con il vincolo di dover definire fin da subito i soli requisiti obbligatori;
-		\item \textbf{Validazione del software} prodotto, per poter garantire le funzionalità concordate.
-	\end{itemize}
-
-	Di seguito vengono analizzati sinteticamente punti deboli e punti di forza dei principali approcci ai processi software, nel contesto del nostro progetto.
-	
-	Va tuttavia ricordato che non è sconsigliato adottare più modelli in forma ibrida, come suggerito da Sommerville (vedi \ref{sec:ref}).
-
-	\subsection{Analisi modelli di sviluppo}
-
-		\subsubsection{Modelli di sviluppo sequenziale}
-
-			\paragraph{Modello a cascata}
-
-			Il modello a cascata (Royce, 1970) è il più antico dei modelli software analizzati e fondamentalmente identifica cinque attività di sviluppo principali:
-			
+\subsection{Scadenze}
+Il gruppo \hx{} ha deciso di rispettare le seguenti scadenze:
 \begin{description}
-\item [Analisi e definizione dei requisiti] il problema viene ben definito, specificando obiettivi e vincoli;
-\item [Progettazione del sistema] si stabilisce una architettura software;
-\item [Implementazione e test di unità] sono sviluppati una serie di unità e i loro relativi test;
-\item [Integrazione e test di sistema] le singole unità sono integrate e sono effettuati test di sistema che devono soddisfare le specifiche iniziali;
-\item [Manuntenzione] la fase del ciclo di vita auspicabilmente più longeva.
+	\item[Revisione dei Requisiti] 24-01-2017;
+	\item[Revisione di Progettazione] 13-03-2017 presentandosi con Revisione di Progettazione minima;
+	\item[Revisione di Qualifica] 18-04-2017;
+	\item[Revisione di Accettazione] 15-05-2017.
 \end{description}
-			
-			Questo tipo di approccio:
+
+
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Modello di sviluppo scelto
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Modello di sviluppo scelto} \label{sec:modscelto}
+
+La scelta di un modello di sviluppo è cruciale per la corretta pianificazione delle attività. Da essa, infatti, si deriva tutta la struttura principale con cui saranno pianificati \gloss{milestone} e task.
+
+Il progetto \proj, come affrontato nei documenti \SdF{} e \PdQ, presenta numerosi punti critici, analizzati nella sezione \ref{sec:rischi} (in particolare nella sezione \ref{sec:tec}, in cui sono analizzati i rischi tecnologici). \proj{} richiede un'intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software CASE (Computer Aided Software Engineering) e alla loro realizzazione, tenendo conto del quantitativo di risorse assegnate al progetto. % riferimento a verbale di riunione con zucchetti?
+
+Un progetto dedito all'esplorazione va supportato con un adeguato modello di sviluppo; esso deve avere i seguenti requisiti:
 \begin{itemize}
-\item Promette un prodotto finito, con grande attenzione alle deadline tracciate inizialmente;
-\item Stabilisce una architettura software iniziale stabile.
+	\item \textbf{tracciabilità delle funzionalità di massima del software}, per definire gli obiettivi cardine del progetto;
+	\item sufficiente \textbf{elasticità in fase di progettazione}, al fine di poter esplorare in modo profondo le possibili implementazioni;
+	\item possibilità di \textbf{raffinamento dei requisiti}, in caso si volesse indirizzare la ricerca in una direzione piuttosto che un'altra, con il vincolo di dover definire fin da subito i soli requisiti obbligatori;
+	\item \textbf{validazione} del software prodotto, per poter garantire le funzionalità concordate.
 \end{itemize}
 
-			Di contro, i svantaggi di questo approccio sono svariati:
-\begin{itemize}
-\item Le varie fasi sono a compartimenti stagni: una volta tracciati i requisiti, essi non possono più venire modificati.
-\item Il committente deve avere già inizialmente una idea molto chiara del prodotto che desidera. 
-\end{itemize}
+\hx{} ritiene che un modello di sviluppo di tipo \textbf{incrementale} apporti sostanziali vantaggi rispetto agli altri modelli analizzati (descritti in appendice \ref{sec:modelli}); l'unico punto debole del modello (la forte criticità del processo di analisi dei requisiti) verrà analizzato nella sezione \ref{sec:rischi}.
 
-Questi ultimi punti entrano in netto contrasto con i requisiti inizialmente proposti; ciò ha portato a scartare questo modello di sviluppo. Tuttavia adotteremo una politica a deadline, anche a causa dei vincoli imposti dalle revisioni del {\TV}.
+Inoltre, il modello di sviluppo \textbf{basato su componenti} è sicuramente interessante e, malgrado non sia stato adottato in toto, ci si riserva la possibilità di seguire i punti che prevedono il design del sistema con riuso e una modifica dei requisiti, al fine di ridurre i tempi e costi di certe componenti del sistema. \hx{} ritiene inoltre che gli svantaggi riguardo ai compromessi che nasceranno siano di gran lunga ripagati dai benefici di questo approccio; infine, l'approccio è stato approvato dal committente in sede di discussione.
 
-			\paragraph{Modello evolutivo}
 
-			Il modello evolutivo, particolarmente apprezzato da Sommerville, prevede una implementazione iniziale e una forte collaborazione tra committente e fornitore allo scopo di raffinare il sistema tramite più versioni del prodotto, fino a raggiungere un sistema adeguato alle esigenze dell'utente.
 
-Ciò si può realizzare principalmente tramite due strumenti differenti: lo \emph{exploratory development} e il \emph{throwaway prototyping}.
 
-Il primo consiste nel lavorare a fianco del cliente per esplorare i suoi requisiti e infine consegnare un sistema adeguato. Mentre questo metodo di lavoro potrebbe sembrare positivo, esso presenta due grosse criticità: 
-\begin{itemize}
-\item Cambiamenti continui tendono a corrompere la struttura e l'architettura del software;
-\item Aggiungere estensioni non previste diventa progressivamente più complesso e costoso. 
-\end{itemize}
-Questo rischio a parere di \hx{} non riesce ad essere bilanciato dalla possibilità di ritardare requisiti e decisioni di design.
 
-La seconda possibilità invece consiste nell'avere dei prototipi usati per meglio comprendere il problema. La criticità presente riguarda il futuro di questi prototipi: sviluppare un prototipo porta valore esclusivamente nell'ambito di comprensione i requisiti del progetto, non porta un effettivo avanzamento nello sviluppo del prodotto.
+%%%%%%%%%%%%%%%%%%%%%%
+%%  Analisi dei rischi
+%%%%%%%%%%%%%%%%%%%%%%
 
-			\paragraph{Modello basato su componenti}
-Questo modello si basa sull'approccio orientato al riuso di componenti già esistenti, in modo da abbattere tempi e costi.
+\section{Analisi dei rischi} \label{sec:rischi}
 
-Esso si differenzia per alcuni differenti fasi intermedie orientate al riuso:
-
+La seguente sezione elenca e descrive i possibili rischi che possono andare ad inficiare il lavoro del gruppo. La gestione dei rischi è divisa in cinque sottofasi:
 \begin{description}
-\item [Analisi dei componenti] a partire dalla specifica dei requisiti, sono ricercati delle componenti già esistenti che possano soddisfare la specifica esistente.
-\item [Modifica dei requisiti] i requisiti variano a seconda delle componenti che sono state identificate.
-\item [Progettazione del sistema con riuso] viene tracciata l'architettura del sistema e sono progettate in dettaglio le componenti non disponibili al riuso.
-\item [Sviluppo e integrazione] Sono sviluppate le componenti non esistenti ed esse sono integrate al sistema con riuso. L'integrazione e lo sviluppo possono non essere attività separate.
-
-\end{description}
-Questo approccio è sicuramente interessante e, malgrado non sia stato adottato in toto, ci si riserva la possibilità di seguire i punti che prevedono il design del sistema con riuso e una modifica dei requisiti, al fine di ridurre i tempi e costi di certe componenti del sistema. \hx{} ritiene inoltre che gli svantaggi riguardo ai compromessi che nasceranno siano di gran lunga ripagati dai benefici di questo approccio; infine l'approccio è stato approvato dal committente in sede di discussione.
-
-		\subsubsection{Modelli di sviluppo iterativi}
-			\paragraph{Modello incrementale}
-			Questo modello sfrutta un approccio che vuole combinare i vantaggi del modello a cascata con il modello evolutivo. Essenzialmente si prevede che il committente identifichi le componenti più importanti e meno importanti; quindi si sviluppa una architettura di base e si fissano degli incrementi delle funzionalità del sistema in iterazioni successive.
-
-Questo modello richiede che ogni incremento:
-\begin{itemize}
-\item Apporti funzionalità tangibili;
-\item Non deve essere eccessivamente ampio (<20mila righe di codice)
-\item Sia validato singolarmente, integrato e sia validato nel complesso
-\end{itemize}
-
-I vantaggi di questo modello sono molteplici:
-\begin{itemize}
-\item Permette di sperimentare il sistema con il committente al fine di chiarificare tutti i requisiti;
-\item I primi incrementi possono essere usati come prototipi;
-\item I servizi a più alta priorità passano inevitabilmente il maggior numero di fasi di test.
-\end{itemize}
-
-Vanno segnalati tuttavia i seguenti difetti:
-\begin{itemize}
-\item Può essere difficile trasformare i requisiti del cliente in incrementi di una misura adeguata;
-\item Non è possibile modificare i requisiti già esistenti negli incrementi successivi.
-\end{itemize}
-
-Ciò si traduce in una criticità del processo nella fase di analisi. Nella sezione {\ref{sec:analisi}} (Analisi dei rischi) si analizza come questo rischio verrà trattato.
-
-In complesso, \hx{} ritiene che il modello incrementale apporti sostanziali vantaggi rispetto agli altri modelli finora analizzati. In seguito si analizzano altri modelli che sono stati presi in considerazione.
-
-			\paragraph{Modello a spirale}
-			Il modello a spirale (Boehm, 1988) è un approccio fondamentalmente rappresentato come una sequenza di attività che si ripetono nel tempo, partendo dalla fattibilità, definizione dei requisiti, ideazione dell'architettura, e così via.
-			
-			Le quattro operazioni ripetute all'interno della spirale sono:
-\begin{itemize}
-\item Identificazione degli obiettivi
-\item Valutazione del rischio
-\item Sviluppo e validazione
-\item Pianificazione (della fase successiva)
-\end{itemize}			 
-
-L'approccio sfrutta una metodologia fortemente \emph{risk-driven} che, malgrado possa portare dei benefici al prodotto finale, essa rischierebbe di appesantire eccessivamente il team, il processo di sviluppo e le risorse.
-
-
-
-\section{Analisi dei rischi} \label{sec:analisi}
-La seguente sezione elenca e descrive i possibili rischi che possono andare ad inficiare sul lavoro del gruppo.
-La gestione dei rischi è divisa in cinque sottofasi:
-\begin{description}
-	\item[Identificazione dei rischi] individuare i rischi potenziali che si possono presentare durante lo sviluppo del progetto e capirne le cause. Questi possono essere identificati in tre diverse tipologie:
+	\item[Identificazione dei rischi] Individuare i rischi potenziali che si possono presentare durante lo sviluppo del progetto e capirne le cause. Questi possono essere identificati in tre diverse tipologie:
 	\begin{itemize}
 		\item Progetto: relativi a pianificazione, strumenti e risorse;
 		\item Prodotto: relativi a conformità e aspettative del committente;
 		\item Business: relativi a costi e concorrenza.
 	\end{itemize}
-	\item[Analisi dei rischi] per ogni rischio si deve stimare le:
+	\item[Analisi dei rischi] Per ogni rischio si deve stimare le:
 	\begin{itemize}
 		\item Probabilità di occorrenza;
 		\item Conseguenze determinarne l'impatto sul progetto per comprenderne le criticità.
 	\end{itemize}
-	\item[Pianificazione di controllo] definire metodi di controllo per i rischi, in modo da poterli evitare tramite:
+	\item[Pianificazione di controllo] Definire metodi di controllo per i rischi, in modo da poterli evitare tramite:
 	\begin{itemize}
 		\item Verifica costante del livello di rischio;
 		\item Riconoscimento e trattamento.
 	\end{itemize}
-	\item[Mitigazione] minimizzare i danni nel caso si fossero verificati tramite:
+	\item[Mitigazione] Minimizzare i danni nel caso si fossero verificati tramite:
 	\begin{itemize}
-		\item Piano di contingenza;
+		\item Piano di contingenza.
 	\end{itemize}
-	\item[Attuazione nel periodo] viene progressivamente descritto se il rischio si è verificato e in tal caso, in che modo il gruppo ha reagito e cosa ha comportato.
+	\item[Attuazione nel periodo] Viene progressivamente descritto se il rischio si è verificato e in tal caso, in che modo il gruppo ha reagito e cosa ha comportato.
 \end{description}
 Ciascun rischio viene identificato a:
 \begin{description}
-	\item[Livello tecnologico](sezione \ref{sec:tec});
-	\item[Livello del personale](sezione \ref{sec:per});
-	\item[Livello organizzativo](sezione \ref{sec:org});
-	\item[Livello dei requisiti](sezione \ref{sec:req});
-	\item[Livello di valutazione dei costi](sezione \ref{sec:val}).
+	\item[Livello tecnologico] (sezione \ref{sec:tec});
+	\item[Livello del personale] (sezione \ref{sec:per});
+	\item[Livello organizzativo] (sezione \ref{sec:org});
+	\item[Livello dei requisiti] (sezione \ref{sec:req});
+	\item[Livello di valutazione dei costi] (sezione \ref{sec:val}).
 \end{description}
 Ogni rischio è caratterizzato da un elenco di informazioni che comprende:
-\begin{description}
-	\item[Nome];
-	\item[Descrizione];
-	\item[Probabilità di occorrenza];
-	\item[Grado di pericolosità];
-	\item[Riconoscimento];
-	\item[Trattamento];
-	\item[Attuazione nel periodo].
-\end{description}
+\begin{itemize}
+	\item Nome;
+	\item Descrizione;
+	\item Probabilità di occorrenza;
+	\item Grado di pericolosità;
+	\item Riconoscimento;
+	\item Trattamento;
+	\item Attuazione nel periodo.
+\end{itemize}
+
+
+% >>> TODO: mettere tutta la sezione in forma tabulare <<<
+% \begin{centering}
+% \begin{tabular}{p{3.5cm}|r|r|p{3cm}|p{3.5cm}|p{3.5cm}}
+% 	\textbf{Descrizione} & \textbf{Probabilità} & \textbf{Pericolosità} & \textbf{Riconoscimento} & \textbf{Trattamento} & \textbf{Attuaz. nel periodo} \\
+% 	\hline
+% 	tecnologie & media & alta & supervisione da parte del resp. di progetto. & auto-apprendimento & analisi dei requisiti: il rishio non si è ancora verificato. \\
+% 	strumentazione dei membri del gruppo e server del gruppo & bassa & media & verifica autonoma quotidiana & utilizzo di \gloss{GitHub} e backup settimanale del server. & analisi dei requisiti: il rishio non si è mai verificato. \\
+% \end{tabular}
+% \end{centering}
+
 	\subsection{Livello tecnologico} \label{sec:tec}
 		\subsubsection{Tecnologie adottate}
 		\begin{description}
@@ -318,7 +249,7 @@ Ogni rischio è caratterizzato da un elenco di informazioni che comprende:
 			\item[Descrizione] durante la fase di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli \emph{Analisti}. Questo può provocare delle divergenze tra le aspettative del proponente e la visione del gruppo sul prodotto;
 			\item[Probabilità di occorrenza] media;
 			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] si ritiene un'ottima strategia di controllo, l'incontro con il proponente stesso per poter discutere dei requisiti identificati, in modo da assicurare la totale concordanza sulle necessità del prodotto;
+			\item[Riconoscimento] si ritiene un'ottima strategia di controllo l'incontro con il proponente stesso, per poter discutere dei requisiti identificati in modo da assicurare la totale concordanza sulle necessità del prodotto;
 			\item[Trattamento] sarà necessario effettuare degli incontri con il proponente in modo da poter definire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e imprecisione che il committente individuerà alle revisioni. 
 			\item[Attuazione nel periodo]:
 			\begin{description}
@@ -341,21 +272,27 @@ Ogni rischio è caratterizzato da un elenco di informazioni che comprende:
 
 
 
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Pianificazione delle Attività
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Pianificazione delle Attività} \label{sec:pianificazione}
 Per eseguire una più accurata pianificazione progettuale, \hx{} ha deciso di suddividere il progetto nelle seguenti fasi:
 \begin{description}
-	\item[\AR](sezione \ref{sec:AR});
-	\item[\ARI](sezione \ref{sec:ARI});
-	\item[\PA](sezione \ref{sec:PA});
-	\item[\PDC](sezione \ref{sec:PDC});
-	\item[\VV](sezione \ref{sec:VV}).
+	\item[\AR] (sezione \ref{sec:AR});
+	\item[\ARI] (sezione \ref{sec:ARI});
+	\item[\PA] (sezione \ref{sec:PA});
+	\item[\PDC] (sezione \ref{sec:PDC});
+	\item[\VV] (sezione \ref{sec:VV}).
 \end{description}
 
 In ognuna di queste fasi, vengono svolte attività di sviluppo del progetto che sono descritte più approfonditamente nel documento corrente.
 
 Inoltre, per illustrare la suddivisione delle seguenti fasi, sono riportati i \gloss{diagrammi di Gantt} di ognuna: ogni diagramma presenta delle \gloss{milestone} stabilite e le varie suddivisioni dei periodi in sotto-attività.
 
-I diagrammi presentano una visualizzazione ridotta e a volte su più pagine per esigenze tipografiche. Qualora non sia chiara la dipendenza tra più task, essa sarà specificata testualmente.
+I diagrammi presentano una visualizzazione ridotta, talvolta su più pagine, per esigenze tipografiche. Qualora non sia chiara la dipendenza tra più task, essa sarà specificata testualmente.
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
@@ -410,9 +347,9 @@ Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme
 
 Note:
 \begin{itemize}
-\item l'attività \emph{Redazione Analisi dei Requisiti} ha una dipendenza verso l'attività \gloss{PragmaDB} appartenente all'attività \emph{Database tracciamento requisiti};
-\item le attività \emph{Redazione Piano di Progetto}, \emph{Redazione Piano di Qualifica} e \emph{Redazione Analisi dei Requisiti} hanno una dipendenza verso l'attività \emph{Redazione Studio di Fattibilità}.
-\item l'attività \emph{Resoconto dell'attività di verifica} richiede il completamento delle attività di verifica dell'\emph{Analisi dei Requisiti} e del \emph{Piano di Progetto}.
+	\item l'attività \emph{Redazione Analisi dei Requisiti} ha una dipendenza verso l'attività \gloss{PragmaDB} appartenente all'attività \emph{Database tracciamento requisiti};
+	\item le attività \emph{Redazione Piano di Progetto}, \emph{Redazione Piano di Qualifica} e \emph{Redazione Analisi dei Requisiti} hanno una dipendenza verso l'attività \emph{Redazione Studio di Fattibilità}.
+	\item l'attività \emph{Resoconto dell'attività di verifica} richiede il completamento delle attività di verifica dell'\emph{Analisi dei Requisiti} e del \emph{Piano di Progetto}.
 \end{itemize} 
 \end{figure}
 		
@@ -454,7 +391,7 @@ Note:
 
 Note:
 \begin{itemize}
-\item Per raggiungere il completamento della fase successiva in tempo per la \emph{Revisione di Qualifica} si prevede di usare parte del tempo prima della scadenza del 06-03-2017 per la stesura della \emph{Definizione di Prodotto}.
+	\item Per raggiungere il completamento della fase successiva in tempo per la \emph{Revisione di Qualifica} si prevede di usare parte del tempo prima della scadenza del 06-03-2017 per la stesura della \emph{Definizione di Prodotto}.
 \end{itemize} 
 \end{figure}
 
@@ -502,44 +439,46 @@ Note:
 \end{figure}
 
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Suddivisione delle ore lavorative
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
 \section{Suddivisione delle ore lavorative e preventivo} \label{sec:preventivo}
+
 Di seguito è riportata la pianificazione di dettaglio delle attività, suddivisa nei periodi descritti precedentemente. Per ogni periodo, sono presenti una tabella e dei grafici che descrivono e rappresentano i ruoli assunti da ciascun componente, il relativo quantitativo di ore impiegato e la rispettiva retribuzione.
 A conclusione, è illustrato un quadro riassuntivo.
-
 
 \newcommand{\roww}[7]{
 	#1 & #2 & #3 & #4 & #5 & #6 & #7
 }
 
 \newcommand{\x}[7]{
-
-\begin{figure}[h]
-  \begin{tabular}{ | l | c | c | c | c | c | c | r   }
-    \hline
-    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Totale ore per persona \\ \hline
-    \PB & \roww[#1] \\ \hline
-    \LB & \roww[#2] \\ \hline
-    \GG & \roww[#3] \\ \hline
-    \MM & \roww[#4] \\ \hline
-    \LS & \roww[#5] \\ \hline
-    \AZ & \roww[#6] \\ \hline
-    Totale ore per ruolo & \roww[#7] \\ \hline
-  \end{tabular}
-\end{figure} 
+	\begin{figure}[h]
+		\begin{tabular}{ | l | c | c | c | c | c | c | r   }
+			\hline
+			Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Totale ore per persona \\ \hline
+			\PB & \roww[#1] \\ \hline
+			\LB & \roww[#2] \\ \hline
+			\GG & \roww[#3] \\ \hline
+			\MM & \roww[#4] \\ \hline
+			\LS & \roww[#5] \\ \hline
+			\AZ & \roww[#6] \\ \hline
+			Totale ore per ruolo & \roww[#7] \\ \hline
+		\end{tabular}
+	\end{figure}
 }
 
-\newcommand{\intropreventivo}[1]
-{
-Di seguito si riporta la divisione oraria pianificata nella fase di #1.
+\newcommand{\intropreventivo}[1]{
+	Di seguito si riporta la divisione oraria pianificata nella fase di #1.
 
-Successivamente sono evidenziate graficamente la divisione delle ore per persona e per ruolo. 
+	Successivamente sono evidenziate graficamente la divisione delle ore per persona e per ruolo. 
 }
 
-
-\newcommand{\introcosto}[1]
-{
-Di seguito si riporta il costo della #1.
+\newcommand{\introcosto}[1]{
+	Di seguito si riporta il costo della #1.
 }
 
 \pagebreak[4]
@@ -1111,7 +1050,7 @@ Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun compone
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/oretotali1.png}}
-\caption{Ore/ruolo per persona per il progetto {\proj}.}
+\caption{Ore/ruolo per persona per il progetto \proj{}.}
 \label{fig:gen1}
 
 \end{figure}
@@ -1119,7 +1058,7 @@ Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun compone
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.1\textwidth]{img/oretotali2.png}}
-\caption{Ore/persona per ruolo per il progetto {\proj}.}
+\caption{Ore/persona per ruolo per il progetto \proj{}.}
 \label{fig:gen2}
 
 \end{figure}
@@ -1162,7 +1101,7 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 \includegraphics[width=1.2\textwidth]{img/costototale.png}}
 \label{tab:cgen1}
 
-  \caption{Costo totale per il progetto {\proj} per ruolo e per persona, valori in euro (\euro).}
+  \caption{Costo totale per il progetto \proj{} per ruolo e per persona, valori in euro (\euro).}
 \end{figure}
 
 
@@ -1247,17 +1186,23 @@ Questo quadro riassuntivo esclude il periodo di {\AR}: i costi che seguono \text
   \caption{Tabella costo totale per ruolo e per persona, valori in euro (\euro).}
 \end{figure}
 
-Il costo totale del progetto {\proj} preventivato è arrotondato a \textbf{12000{\euro}} (\emph{dodicimila euro}).
+Il costo totale del progetto \proj{} preventivato è arrotondato a \textbf{12000{\euro}} (\emph{dodicimila euro}).
 
 \begin{figure}[H]
 \makebox[\textwidth][c]{
 \includegraphics[width=1.2\textwidth]{img/costototale.png}}
 \label{tab:cgen1}
 
-  \caption{Costo totale per il progetto {\proj} per ruolo e per persona, valori in euro (\euro).}
+  \caption{Costo totale per il progetto \proj{} per ruolo e per persona, valori in euro (\euro).}
 \end{figure}
 
 
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Consuntivo di periodo
+%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Consuntivo di periodo} \label{sec:consuntivo}
 In questa sezione sono indicate le spese affrontate a termine di ogni \gloss{milestone} interna. Queste andranno a sommarsi per infine stilare il consuntivo finale.
@@ -1367,6 +1312,12 @@ Siccome non sono state rilevate variazioni nei costi, il preventivo a finire (a 
 
 
 
+
+
+%%%%%%%%%%%%%%%%
+%%  Organigramma
+%%%%%%%%%%%%%%%%
+
 \section{Organigramma}	\label{sec:organigramma}
 \subsection{Redazione}
 
@@ -1450,5 +1401,112 @@ Siccome non sono state rilevate variazioni nei costi, il preventivo a finire (a 
 }
 \caption{Componenti}
 \end{figure}
+
+
+
+
+
+\appendix
+
+%%%%%%%%%%%%%%%%%%%%%%%
+%%  Modelli di sviluppo
+%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Modelli di sviluppo} \label{sec:modelli}
+
+Di seguito vengono analizzati sinteticamente punti deboli e punti di forza dei principali approcci ai processi software, nel contesto del nostro progetto.
+
+Va tuttavia ricordato che non è sconsigliato adottare più modelli in forma ibrida, come suggerito da Sommerville (vedi \ref{sec:ref}).
+
+\subsection{Modelli di sviluppo sequenziali}
+
+\subsubsection{Modello a cascata}
+Il modello a cascata (Royce, 1970) è il più antico dei modelli software analizzati e fondamentalmente identifica cinque attività di sviluppo principali:
+\begin{description}
+	\item [Analisi e definizione dei requisiti] il problema viene ben definito, specificando obiettivi e vincoli;
+	\item [Progettazione del sistema] si stabilisce un'architettura software;
+	\item [Implementazione e test di unità] sono sviluppate una serie di unità e i loro relativi test;
+	\item [Integrazione e test di sistema] le singole unità sono integrate e sono effettuati test di sistema che devono soddisfare le specifiche iniziali;
+	\item [Manuntenzione] la fase del ciclo di vita auspicabilmente più longeva.
+\end{description}
+
+Questo tipo di approccio:
+\begin{itemize}
+	\item promette un prodotto finito, con grande attenzione alle deadline tracciate inizialmente;
+	\item stabilisce una architettura software iniziale stabile.
+\end{itemize}
+
+Di contro, i svantaggi di questo approccio sono svariati:
+\begin{itemize}
+	\item le varie fasi sono a compartimenti stagni --- una volta tracciati i requisiti, essi non possono più venire modificati;
+	\item il committente deve avere già inizialmente una idea molto chiara del prodotto che desidera.
+\end{itemize}
+Questi ultimi punti entrano in netto contrasto con i requisiti inizialmente proposti; ciò ha portato a scartare questo modello di sviluppo. Tuttavia adottiamo una politica a \emph{deadline}, anche a causa dei vincoli imposti dalle revisioni del \TV.
+
+\subsubsection{Modello evolutivo}
+Il modello evolutivo, particolarmente apprezzato da Sommerville, prevede una implementazione iniziale e una forte collaborazione tra committente e fornitore allo scopo di raffinare il sistema tramite più versioni del prodotto, fino a raggiungere un sistema adeguato alle esigenze dell'utente.
+
+Ciò si può realizzare principalmente tramite due strumenti differenti: lo \emph{exploratory development} e il \emph{throwaway prototyping}.
+
+Il primo consiste nel lavorare a fianco del cliente per esplorare i suoi requisiti e infine consegnare un sistema adeguato. Benché questo metodo di lavoro potrebbe sembrare positivo, esso presenta due grosse criticità: 
+\begin{itemize}
+	\item cambiamenti continui tendono a corrompere la struttura e l'architettura del software;
+	\item aggiungere estensioni non previste diventa progressivamente più complesso e costoso. 
+\end{itemize}
+Questo rischio a parere di \hx{} non riesce ad essere bilanciato dalla possibilità di ritardare requisiti e decisioni di design.
+
+La seconda possibilità invece consiste nell'avere dei prototipi usati per meglio comprendere il problema. La criticità presente riguarda il futuro di questi prototipi: sviluppare un prototipo porta valore esclusivamente nell'ambito di comprensione dei requisiti del progetto; non porta un effettivo avanzamento nello sviluppo del prodotto.
+
+\subsubsection{Modello basato su componenti}
+Questo modello si basa sull'approccio orientato al riuso di componenti già esistenti, in modo da abbattere tempi e costi. Esso si differenzia per alcuni differenti fasi intermedie orientate al riuso:
+\begin{description}
+	\item [Analisi dei componenti] a partire dalla specifica dei requisiti, sono ricercati delle componenti già esistenti che possano soddisfare la specifica esistente.
+	\item [Modifica dei requisiti] i requisiti variano a seconda delle componenti che sono state identificate.
+	\item [Progettazione del sistema con riuso] viene tracciata l'architettura del sistema e sono progettate in dettaglio le componenti non disponibili al riuso.
+	\item [Sviluppo e integrazione] Sono sviluppate le componenti non esistenti ed esse sono integrate al sistema con riuso. L'integrazione e lo sviluppo possono non essere attività separate.
+\end{description}
+
+Questo approccio è sicuramente interessante e, malgrado non sia stato adottato in toto, ci si riserva la possibilità di seguire i punti che prevedono il design del sistema con riuso e una modifica dei requisiti, al fine di ridurre i tempi e costi di certe componenti del sistema. \hx{} ritiene inoltre che gli svantaggi riguardo ai compromessi che nasceranno siano di gran lunga ripagati dai benefici di questo approccio; infine l'approccio è stato approvato dal committente in sede di discussione.
+
+\subsection{Modelli di sviluppo iterativi}
+
+\subsubsection{Modello incrementale}
+Questo modello sfrutta un approccio che vuole combinare i vantaggi del modello a cascata con il modello evolutivo. Essenzialmente si prevede che il committente identifichi le componenti più importanti e meno importanti; quindi si sviluppa una architettura di base e si fissano degli incrementi delle funzionalità del sistema in iterazioni successive.
+
+Questo modello richiede che ogni incremento:
+\begin{itemize}
+	\item Apporti funzionalità tangibili;
+	\item Non deve essere eccessivamente ampio (<20mila righe di codice)
+	\item Sia validato singolarmente, integrato e sia validato nel complesso
+\end{itemize}
+
+I vantaggi di questo modello sono molteplici:
+\begin{itemize}
+	\item Permette di sperimentare il sistema con il committente al fine di chiarificare tutti i requisiti;
+	\item I primi incrementi possono essere usati come prototipi;
+	\item I servizi a più alta priorità passano inevitabilmente il maggior numero di fasi di test.
+\end{itemize}
+
+Vanno segnalati tuttavia i seguenti difetti:
+\begin{itemize}
+\item Può essere difficile trasformare i requisiti del cliente in incrementi di una misura adeguata;
+\item Non è possibile modificare i requisiti già esistenti negli incrementi successivi.
+\end{itemize}
+Ciò si traduce in una criticità del processo nella fase di analisi. Nella sezione {\ref{sec:rischi}} (Analisi dei rischi) si analizza come questo rischio verrà trattato.
+
+In complesso, \hx{} ritiene che il modello incrementale apporti sostanziali vantaggi rispetto agli altri modelli finora analizzati. In seguito si analizzano altri modelli che sono stati presi in considerazione.
+
+\subsubsection{Modello a spirale}
+Il modello a spirale (Boehm, 1988) è un approccio fondamentalmente rappresentato come una sequenza di attività che si ripetono nel tempo, partendo dalla fattibilità, definizione dei requisiti, ideazione dell'architettura, e così via. Le quattro operazioni ripetute all'interno della spirale sono:
+\begin{itemize}
+	\item Identificazione degli obiettivi
+	\item Valutazione del rischio
+	\item Sviluppo e validazione
+	\item Pianificazione (della fase successiva)
+\end{itemize}			 
+
+L'approccio sfrutta una metodologia fortemente \emph{risk-driven} che, malgrado possa portare dei benefici al prodotto finale, rischierebbe di appesantire eccessivamente il team, il processo di sviluppo e le risorse.
+
+
 
 \end{document}
