--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -2,6 +2,7 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	1.0.1 & {\GG} (Responsabile) & 03/02/2017 & Correzione degli errori individuati nelle prime tre sezioni del documento \\ \hline
 	1.0.0 & {\PB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
 	0.1.0 & {\MM} (Verificatore) & 07/01/2017 & Verifica documento \\ \hline
 	0.0.9 & {\PB} (Responsabile) & 05/01/2017 & Stesura Organigramma \\ \hline
