incremento PdP: analisi dei rischi

--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -14,6 +14,7 @@
 \usepackage{fancyhdr}
 \usepackage[table]{xcolor}
 \usepackage{longtable}
+\usepackage{chngpage}
 \usepackage{grffile}
 \usepackage{hyperref}
 \hypersetup{hidelinks}
