--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -114,161 +114,106 @@ Inoltre, il modello di sviluppo \textbf{basato su componenti} è sicuramente int
 
 \section{Analisi dei rischi} \label{sec:rischi}
 
-La seguente sezione elenca e descrive i possibili rischi che possono andare ad inficiare il lavoro del gruppo. La gestione dei rischi è divisa in cinque sottofasi:
+La seguente sezione elenca e descrive i possibili rischi che possono andare ad inficiare il lavoro del gruppo. La gestione dei rischi è divisa in cinque sotto-attività:
 \begin{description}
 	\item[Identificazione dei rischi] Individuare i rischi potenziali che si possono presentare durante lo sviluppo del progetto e capirne le cause. Questi possono essere identificati in tre diverse tipologie:
 	\begin{itemize}
-		\item Progetto: relativi a pianificazione, strumenti e risorse;
-		\item Prodotto: relativi a conformità e aspettative del committente;
-		\item Business: relativi a costi e concorrenza.
+		\item progetto: relativi a pianificazione, strumenti e risorse;
+		\item prodotto: relativi a conformità e aspettative del committente;
+		\item business: relativi a costi e concorrenza.
 	\end{itemize}
-	\item[Analisi dei rischi] Per ogni rischio si deve stimare le:
+	\item[Analisi dei rischi] Per ogni rischio si devono stimare:
 	\begin{itemize}
-		\item Probabilità di occorrenza;
-		\item Conseguenze determinarne l'impatto sul progetto per comprenderne le criticità.
+		\item la probabilità di occorrenza;
+		\item le conseguenze --- determinarne l'impatto sul progetto per comprenderne le criticità.
 	\end{itemize}
 	\item[Pianificazione di controllo] Definire metodi di controllo per i rischi, in modo da poterli evitare tramite:
 	\begin{itemize}
-		\item Verifica costante del livello di rischio;
-		\item Riconoscimento e trattamento.
+		\item verifica costante del livello di rischio;
+		\item riconoscimento e trattamento.
 	\end{itemize}
 	\item[Mitigazione] Minimizzare i danni nel caso si fossero verificati tramite:
 	\begin{itemize}
-		\item Piano di contingenza.
+		\item piano di contingenza.
 	\end{itemize}
 	\item[Attuazione nel periodo] Viene progressivamente descritto se il rischio si è verificato e in tal caso, in che modo il gruppo ha reagito e cosa ha comportato.
 \end{description}
 Ciascun rischio viene identificato a:
-\begin{description}
-	\item[Livello tecnologico] (sezione \ref{sec:tec});
-	\item[Livello del personale] (sezione \ref{sec:per});
-	\item[Livello organizzativo] (sezione \ref{sec:org});
-	\item[Livello dei requisiti] (sezione \ref{sec:req});
-	\item[Livello di valutazione dei costi] (sezione \ref{sec:val}).
-\end{description}
-Ogni rischio è caratterizzato da un elenco di informazioni che comprende:
 \begin{itemize}
-	\item Nome;
-	\item Descrizione;
-	\item Probabilità di occorrenza;
-	\item Grado di pericolosità;
-	\item Riconoscimento;
-	\item Trattamento;
-	\item Attuazione nel periodo.
+	\item Livello tecnologico:
+	\begin{itemize}
+		\item tecnologie adottate;
+		\item rotture hardware.
+	\end{itemize}
+	\item Livello del personale:
+	\begin{itemize}
+		\item problemi tra membri del gruppo;
+		\item problemi personali dei membri;
+		\item problemi di inesperienza.
+	\end{itemize}
+	\item Livello organizzativo:
+	\begin{itemize}
+		\item pianificazione errata.
+	\end{itemize}
+	\item Livello dei requisiti:
+	\begin{itemize}
+		\item incomprensioni e scelte non congrue.
+	\end{itemize}
+	\item Livello di valutazione dei costi:
+	\begin{itemize}
+		\item errore nelle previsioni.
+	\end{itemize}
+\end{itemize}
+Ogni rischio è caratterizzato da:
+\begin{itemize}
+	\item nome;
+	\item descrizione;
+	\item probabilità di occorrenza;
+	\item grado di pericolosità;
+	\item riconoscimento;
+	\item trattamento;
+	\item attuazione nel periodo.
 \end{itemize}
 
+\begin{adjustwidth}{-3cm}{-3cm}
+\begin{center}
+\begin{tabular}{| p{3cm} | p{8cm} | r | r |}
+	\hline
+	\textbf{Nome} & \textbf{Descrizione} & \textbf{Probabilità} & \textbf{Pericolosità} \\
+	\hline
+	tecnologie adottate & Le tecnologie adottate per sviluppare il prodotto sono solamente in parte note ai componenti del gruppo e ciò non toglie che vi possano essere delle mancanze. & media & alta \\
+	rotture hardware & La strumentazione hardware e software usata dal gruppo può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare \gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero team, rendendo così più difficile l'avanzamento. & bassa & media \\
+	problemi tra membri del gruppo & i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Questo potrebbe portare ad incomprensioni e dissidi tra i membri del gruppo, generando quindi un clima non proficuo. & bassa & alta \\
+	problemi personali dei membri & Ciascun componente del gruppo ha impegni personali e necessità proprie; questo implica la possibilità che qualche componente del team non sia disponibile in certi momenti. & media & media \\
+	problemi di inesperienza & L'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza; inoltre, alcune conoscenze richieste necessitano di tempo per poter essere apprese. & alta & alta \\
+	pianificazione errata & Durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro per il gruppo. & media & alta \\
+	incomprensioni e scelte non congrue & Durante l'attività di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli analisti; questo può provocare delle divergenze tra le aspettative del proponente e la visione del gruppo sul prodotto. & media & alta \\
+	errore nelle previsioni & È possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Una valutazione errata di queste può comportare una variazione sul costo preventivo presentato. & media & media \\
+	\hline
+\end{tabular}
+\end{center}
+\end{adjustwidth}
 
-% >>> TODO: mettere tutta la sezione in forma tabulare <<<
-% \begin{centering}
-% \begin{tabular}{p{3.5cm}|r|r|p{3cm}|p{3.5cm}|p{3.5cm}}
-% 	\textbf{Descrizione} & \textbf{Probabilità} & \textbf{Pericolosità} & \textbf{Riconoscimento} & \textbf{Trattamento} & \textbf{Attuaz. nel periodo} \\
-% 	\hline
-% 	tecnologie & media & alta & supervisione da parte del resp. di progetto. & auto-apprendimento & analisi dei requisiti: il rishio non si è ancora verificato. \\
-% 	strumentazione dei membri del gruppo e server del gruppo & bassa & media & verifica autonoma quotidiana & utilizzo di \gloss{GitHub} e backup settimanale del server. & analisi dei requisiti: il rishio non si è mai verificato. \\
-% \end{tabular}
-% \end{centering}
+\newpage
 
-	\subsection{Livello tecnologico} \label{sec:tec}
-		\subsubsection{Tecnologie adottate}
-		\begin{description}
-			\item[Descrizione] le tecnologie adottate per sviluppare il prodotto sono solamente in parte note ai componenti del gruppo e ciò non toglie che vi possano essere delle mancanze;
-			\item[Probabilità di occorrenza] media;
-			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] il \Rx{} ha il compito di verificare il grado di conoscenza e preparazione di ciascun componente relativo alle tecnologie adottate;
-			\item[Trattamento] ciascun componente si impegnerà a documentarsi in maniera autonoma sulle tecnologie adottate;
-			\item[Attuazione nel periodo]:
-			 \begin{description}
-				\item[Analisi dei requisiti] il rischio non si è ancora verificato dato che non sono state usate tali tecnologie in questo periodo di sviluppo.
-			\end{description}
-		\end{description}
-		\subsubsection{Rotture Hardware}
-		\begin{description}
-			\item[Descrizione] la strumentazione hardware e software usata dal gruppo può essere soggetta a rotture e malfunzionamenti durante lo sviluppo del progetto. Un altro rischio di fallibilità hardware è quello del \gloss{server} usato per ospitare \gloss{PragmaDB}, un malfunzionamento su tale macchina o sui pc dei membri del gruppo mette a rischio il lavoro dell'intero team, rendendo così più difficile l'avanzamento;
-			\item[Probabilità di occorrenza] bassa;
-			\item[Grado di pericolosità] medio;
-			\item[Riconoscimento] ogni membro del team avrà cura dei propri strumenti hardware verificandone giornalmente il completo funzionamento;
-			\item[Trattamento] prima di qualunque spostamento, è obbligatorio sincronizzare sul \gloss{server} \gloss{GitHub} i file modificati. Se ciò non fosse possibile per assenza di collegamento ad Internet, è obbligatorio copiare i propri avanzamenti su almeno un dispositivo di memoria esterno secondario. Per il \gloss{server} che ospita \gloss{PragmaDB}, è previsto un sistema di \gloss{backup} automatico ogni 7 giorni e in caso di malfunzionamenti sarà compito dell’\AM{} riportare tale macchina in uno stato funzionante nel minor tempo possibile; 
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti] il rischio non si è mai verificato.
-			\end{description}
-		\end{description}
-	\subsection{Livello del personale} \label{sec:per}
-		\subsubsection{Problemi tra componenti del team}
-		\begin{description}
-			\item[Descrizione] i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Questo potrebbe portare ad incomprensioni e dissidi tra i membri del gruppo, generando quindi un clima non proficuo;
-			\item[Probabilità di occorrenza] bassa;
-			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] il \Rx{} deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia eventualmente nascendo un dissidio fra uno o più membri;
-			\item[Trattamento] il \Rx{} provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile;
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti] il rischio non si è mai verificato.
-			\end{description}
-		\end{description}
-		\subsubsection{Problemi personali dei componenti del team}
-		\begin{description}
-			\item[Descrizione] ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del team non sia disponibile in certi momenti.
-			\item[Probabilità di occorrenza] media;
-			\item[Grado di pericolosità] medio;
-			\item[Riconoscimento] ognuno è tenuto a comunicare tempestivamente i propri impegni al \Rx{} in modo da create un calendario sincronizzato e condiviso del gruppo;
-			\item[Trattamento] ad ogni impegno notificato, il \Rx{} si prenderà la responsabilità di eseguire una nuova parte di pianificazione del periodo problematico; 
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti] il rischio si è verificato  a due membri del gruppo che hanno dovuto abbandonare la riunione prima della conclusione per problemi personali;
-			\end{description}
-		\end{description}
-		\subsubsection{Problemi di inesperienza}
-		\begin{description}
-			\item[Descrizione] l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste, necessitano di tempo per poter essere apprese;
-			\item[Probabilità di occorrenza] alta;
-			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al \Rx{} che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 	impiegarlo al meglio;
-			\item[Trattamento] ogni membro del gruppo ha il compito di documentarsi su strumenti e tecnologie utili allo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il \Rx{} dovrà preparare un piano di studi per compensare ogni tipo di lacuna;
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti]  il rischio si è verificato soprattutto nella prima fase.
-			\end{description}
-		\end{description}
-	\subsection{Livello organizzativo} \label{sec:org}
-		\subsubsection{Pianificazione Errata}
-		\begin{description}
-			\item[Descrizione] durante la pianificazione è possibile che, a causa di assunzioni sbagliate, i tempi per l'esecuzione di alcune attività vengano calcolati in modo errato. Ciò potrebbe portare ad avere dei periodi di inattività o di sovraccarico di lavoro del team;
-			\item[Probabilità di occorrenza] media;
-			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] è necessario controllare lo stato delle attività nel programma di \emph{project management} periodicamente, in modo da verificare eventuali ritardi nello sviluppo delle attività; 
-			\item[Trattamento] si è deciso di prevedere per ogni attività, un periodo maggiore di quanto normalmente richiesto e una fase di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto; 
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti]  il rischio non si è mai verificato.
-			\end{description}
-		\end{description}
-	\subsection{Livello dei requisiti} \label{sec:req}
-		\subsubsection{Incomprensioni e scelte non congrue}
-		\begin{description}
-			\item[Descrizione] durante la fase di analisi del capitolato, è possibile che il problema e i suoi requisiti non vengano capiti in toto, fraintesi o tralasciati dagli \emph{Analisti}. Questo può provocare delle divergenze tra le aspettative del proponente e la visione del gruppo sul prodotto;
-			\item[Probabilità di occorrenza] media;
-			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] si ritiene un'ottima strategia di controllo l'incontro con il proponente stesso, per poter discutere dei requisiti identificati in modo da assicurare la totale concordanza sulle necessità del prodotto;
-			\item[Trattamento] sarà necessario effettuare degli incontri con il proponente in modo da poter definire con chiarezza ogni requisito necessario al corretto sviluppo del progetto. Inoltre, sarà importante correggere tempestivamente ogni errore e imprecisione che il committente individuerà alle revisioni. 
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti] il rischio si è verificato durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato.
-			\end{description}
-		\end{description}
-	\subsection{Livello della valutazione dei costi} \label{sec:val}
-		\subsubsection{Errore nelle previsioni}
-		\begin{description}
-			\item[Descrizione] è possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
-			\item[Probabilità di occorrenza] media;
-			\item[Grado di pericolosità] medio;
-			\item[Riconoscimento] quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il \Rx{} monitori con grande attenzione il programma di \emph{project management} e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
-			\item[Trattamento] è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
-			\item[Attuazione nel periodo]:
-			\begin{description}
-				\item[Analisi dei requisiti] il rischio non si è mai verificato.
-			\end{description}
-		\end{description}
+\begin{adjustwidth}{-1cm}{-1cm}
+\begin{center}
+\begin{longtable}{| p{3cm} | p{3.5cm} | p{4cm} | p{3cm} |}
+	\hline
+	\textbf{Nome} & \textbf{Riconoscimento} & \textbf{Trattamento} & \textbf{Attuazione nel periodo} \\
+	\hline
+	tecnologie adottate & supervisione del \Rx{} su ciascun membro del gruppo & apprendimento autonomo delle tecnologie adottate & Analisi dei requisiti: rischio non ancora verificatosi (non sono state usate tali tecnologie in questo periodo di sviluppo). \\
+	rotture hardware & verifica giornaliera del funzionamento dei propri strumenti & sincronizzazione con \gloss{GitHub} al termine di ogni modifica al \gloss{repository} continui backup su dispositivo di memoria esterno; \gloss{backup} automatico settimanale del \gloss{server} su AWS e tempestività dell’\AM{} nel riportare tale macchina in uno stato funzionante nel minor tempo possibile & Analisi dei requisiti: rischio mai verificatosi. \\
+	problemi tra membri del gruppo & monitoraggio, da parte del \Rx{}, dello stato di collaborazione fra i vari membri del gruppo & il \Rx{} provvede, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li facciano collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile & Analisi dei requisiti: rischio mai verificatosi. \\
+	problemi personali dei membri & ognuno è tenuto a comunicare tempestivamente i propri impegni al \Rx{} in modo da create un calendario sincronizzato e condiviso & ad ogni impegno notificato, il \Rx{} eseguirà una nuova parte di pianificazione del periodo problematico & Analisi dei requisiti: rischio verificatosi  a due membri del gruppo, che hanno lasciato una riunione prima del termine per problemi personali. \\
+	problemi di inesperienza & segnalazione al \Rx{} di ogni tecnologia potenzialmente utile; il \Rx{}, una volta approvatone l'utilizzo, demanda al gruppo il compito di documentarsi su di essa & obbligo, per ciascuno, di documentarsi su strumenti e tecnologie utili allo svolgimento del progetto; se questo non fosse sufficiente, il \Rx{} prepara un piano di studi per compensare ogni tipo di lacuna & Analisi dei requisiti: rischio verificatosi soprattutto all'inizio del periodo. \\
+	pianificazione errata & controllo periodico dello stato delle attività nel programma di \emph{project management}, in modo da verificare eventuali ritardi nelle attività & si è deciso di prevedere, per ogni attività, un periodo maggiore di quanto normalmente richiesto e una fase di verifica ogni venerdì della settimana interessata per poter correggere, dove possibile, gli eventuali errori il sabato stesso; in tale maniera, un eventuale ritardo non influenzerà la durata totale del progetto & Analisi dei requisiti: rischio mai verificatosi. \\
+	incomprensioni e scelte non congrue & incontro con il proponente stesso, per poter discutere dei requisiti identificati e assicurarsi della totale concordanza sulle necessità del prodotto & incontri con il proponente e correzione tempestiva di ogni errore e imprecisione che il committente individua alle revisioni & Analisi dei requisiti: rischio verificatosi durante il secondo incontro, facendo emergere dei nuovi requisiti fondamentali non evidenziati nel capitolato. \\
+	errore nelle previsioni & attento monitoraggio del programma di \emph{project management} da parte del \Rx{}, che deve attuare tempestive modiche alla pianificazione e al rendiconto dei costi & è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli & Analisi dei requisiti: rischio mai verificatosi. \\
+	\hline
+\end{longtable}
+\end{center}
+\end{adjustwidth}
 
 
 
