data automatica nei docc e scorporato verbali

--- a/doc/Esterni/Glossario/Glossario_1_0_0.tex
+++ b/doc/Esterni/Glossario/Glossario_1_0_0.tex
@@ -10,7 +10,7 @@
 \uso{esterno}
 \dest{\TV, \RC, \GP, \ALL}
 \title{Glossario}
-\date{9 gennaio 2017}
+% \date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
