--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -11,7 +11,7 @@
 \uso{esterno}
 \dest{\TV, \RC, \ZU}
 \title{Piano di Qualifica}
-\date{9 gennaio 2017}
+% \date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
