--- a/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
+++ b/doc/Interni/Studio_di_fattibilita/Studio_di_fattibilita_1_0_0.tex
@@ -10,7 +10,7 @@
 \uso{interno}
 \dest{\ALL}
 \title{Studio di Fattibilità}
-\date{9 gennaio 2017}
+% \date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
