--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -10,7 +10,7 @@
 \uso{esterno}
 \dest{\TV, \RC, \ZU}
 \title{Analisi dei Requisiti}
-\date{9 gennaio 2017}
+% \date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
