--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -10,7 +10,7 @@
 \uso{interno}
 \dest{\ALL}
 \title{Norme di Progetto}
-\date{9 gennaio 2017}
+% \date{9 gennaio 2017}
 
 \begin{document}
 \maketitle
