diario per verbali è ora documento autonomo

--- a/doc/Interni/Verbali/diario.tex
+++ b/doc/Interni/Verbali/diario.tex
@@ -1,7 +1,21 @@
-% diario delle modifiche per i verbali
-% da includere con \include{diario}
+% Diario delle modifiche per i verbali
+% da compilare con il comando pdflatex Interni/Verbali/diario.tex
+
+\input{../../util/hx-ambiente}
+
+\version{1.0.1}
+\creaz{22 dicembre 2016}
+\author{\ALL}
+\supervisor{-}
+\uso{interno}
+\dest{Tutti i membri del gruppo}
+\title{Diario delle modifiche per i verbali}
+% \date{9 gennaio 2017}
+
+\begin{document}
 
 \begin{diario}
+	1.0.1 & {\GG} (Responsabile) & 09/02/2017 & Scorporamento dei verbali in documenti separati \\ \hline
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
 	0.1.0 & {\MM} (Verificatore) & 09/01/2017 & Verifica documento \\ \hline
 	0.0.3 & {\PB} (Responsabile) & 02/01/2017 & Stesura verbali del 23/12/2016 e del 02/01/2016 \\ \hline
@@ -9,3 +23,5 @@
 	0.0.2 & {\PB} (Responsabile) & 12/12/2016 & Stesura verbale del 12/12/2016 \\ \hline
 	0.0.1 & {\PB} (Responsabile) & 01/12/2016 & Stesura verbale del 29/11/2016 \\ \hline
 \end{diario}
+
+\end{document}
