--- a/doc/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/diario.tex
@@ -2,6 +2,7 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	1.0.2 & {\PB} (NonMiRicordo!!!!!) & 14/02/2017 & Incrementi e correzioni a seguito della revisione (inserito scenario alternativo UC2, aggiunto UC3.1 alle varie tabelle-tracciamenti, corrette descrizioni UC5 e UC7) \\ \hline
 	1.0.1 & {\GG} (Verificatore) & 01/02/2017 & Incrementi e correzioni a seguito della revisione (creato UC3.1; corretti UC4.1.6.3.2, UC4.2.1, diagramma UC5 e alcune postcondizioni) \\ \hline
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
 	0.4.0 & {\LS} (Verificatore) & 06/01/2017 & Verifica introduzione, descrizione generale e requisiti \\ \hline
