effettuate modifiche Adr

--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -2288,10 +2288,10 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \label{UC7}
 \begin{itemize}
 	\item \textbf{Attori}: Utente;
-	\item \textbf{Descrizione}: l'attore può ottenere (scaricare) automaticamente l'applicativo generato dai diagrammi da esso forniti e realizzati mediante l'\gloss{editor}, i diagrammi stessi ed il codice sorgente in linguaggio \gloss{Java} ;
+	\item \textbf{Descrizione}: l'attore può ottenere (scaricare) automaticamente un file .jar contenente l'applicativo generato dai diagrammi da esso forniti e realizzati mediante l'\gloss{editor}, i diagrammi stessi ed il codice sorgente in linguaggio target;
 	\item \textbf{Precondizione}: il \gloss{diagramma delle classi} è completo e per ogni metodo è disponibile un \gloss{diagramma delle attività} corretto;
 	\item \textbf{Postcondizione}: il sistema genera l'applicativo derivante dai due diagrammi, i diagrammi stessi ed il codice sorgente;
-	\item \textbf{Scenario principale}: l'attore scarica tre file quali l'applicativo, i diagrammi da lui realizzati ed il codice sorgente;
+	\item \textbf{Scenario principale}: l'attore scarica il file .jar contenente tre file quali l'applicativo, i diagrammi da lui realizzati ed il codice sorgente;
 	\item \textbf{Estensioni}: l'attore visualizza un messaggio d'errore relativo ai diagrammi realizzati (UC7.1);
 	\item \textbf{Scenari alternativi}:
 	\begin{itemize}
